class Player():
    def __init__(self, name, colour):
        """    Base class for all player types.
        """
        
        self.symbol = name
        self.colour = colour
    
